<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movietab" />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/title_tv" />
</menu>