<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.example.moviecatalogue.ui.tv.TVFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.moviecatalogue.ui.movie.MovieFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_movie" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_favorite"-->
<!--        android:name="com.example.moviecatalogue.ui.favorite.FavoriteFragment"-->
<!--        android:label="@string/app_name"-->
<!--        tools:layout="@layout/fragment_favorite" />-->

</navigation>